--- a/OpenGL/makefile
+++ b/OpenGL/makefile
@@ -14,14 +14,21 @@ OpenGL.obj:$(DIR_HELLO)/OpenGL.cpp
 
 #RedBook chapter_1
 DIR_RB8=./RedBook
+DIR_RB7=./RedBook7
 DIR_CHAPTER_1=/chapter_1
+DIR_CHAPTER_2=/chapter_2
 
-RedBook.chapter_1:triangles.obj
+rb8.c1:triangles.obj
 	$(LINK) $(BIN)/triangles.obj /OUT:$(BIN)/triangles.exe
 triangles.obj:$(DIR_RB8)$(DIR_CHAPTER_1)/triangles.cpp
 	$(CL) $(DIR_RB8)$(DIR_CHAPTER_1)/triangles.cpp /Fo$(BIN)/triangles.obj
 
-	
+
+rb7.c2:geometry.obj
+	$(LINK) $(BIN)/geometry.obj $(BIN)/draw.obj /OUT:$(BIN)/geometry.exe
+geometry.obj:$(DIR_RB7)$(DIR_CHAPTER_2)/geometry.cpp $(DIR_RB7)$(DIR_CHAPTER_2)/draw.cpp 
+	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/geometry.cpp /Fo$(BIN)/geometry.obj
+	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/draw.cpp /Fo$(BIN)/draw.obj
 	
 clean:
 	-rm $(BIN)/*.obj $(BIN)/*.exe $(BIN)/*.pdb $(BIN)/*.idb $(BIN)/*.manifest $(BIN)/*.ilk  
