--- a/OpenGL/makefile
+++ b/OpenGL/makefile
@@ -23,18 +23,17 @@ rb8.c1:triangles.obj
 triangles.obj:$(DIR_RB8)$(DIR_CHAPTER_1)/triangles.cpp
 	$(CL) $(DIR_RB8)$(DIR_CHAPTER_1)/triangles.cpp /Fo$(BIN)/triangles.obj
 
-
-rb7.c2.geometry:geometry.obj
+rb7.c2.geometry:geometry.obj draw.obj
 	$(LINK) $(BIN)/geometry.obj $(BIN)/draw.obj /OUT:$(BIN)/geometry.exe
-geometry.obj:$(DIR_RB7)$(DIR_CHAPTER_2)/geometry.cpp $(DIR_RB7)$(DIR_CHAPTER_2)/draw.cpp 
-	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/geometry.cpp /Fo$(BIN)/geometry.obj
-	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/draw.cpp /Fo$(BIN)/draw.obj
-	
-rb7.c2.geometry2:geometry.obj
+
+rb7.c2.geometry2:geometry2.obj draw2.obj random.obj
 	$(LINK) $(BIN)/geometry2.obj $(BIN)/draw2.obj $(BIN)/random.obj /OUT:$(BIN)/geometry2.exe
-geometry.obj:$(DIR_RB7)$(DIR_CHAPTER_2)/geometry.cpp $(DIR_RB7)$(DIR_CHAPTER_2)/draw2.cpp 
-	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/geometry.cpp /Fo$(BIN)/geometry2.obj
+	
+draw.obj:$(DIR_RB7)$(DIR_CHAPTER_2)/draw.cpp
+	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/draw.cpp /Fo$(BIN)/draw.obj
+draw2.obj:$(DIR_RB7)$(DIR_CHAPTER_2)/draw2.cpp 
 	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/draw2.cpp /Fo$(BIN)/draw2.obj
+random.obj:$(DIR_RB7)$(DIR_CHAPTER_2)/random.cpp 
 	$(CL) $(DIR_RB7)$(DIR_CHAPTER_2)/random.cpp /Fo$(BIN)/random.obj
 	
 rb7.c2.botest:buffer_object_test.obj
