--- a/OpenGL/makefile
+++ b/OpenGL/makefile
@@ -35,10 +35,11 @@ DIR_CHAPTER_1=/chapter_1
 DIR_CHAPTER_2=/chapter_2
 
 rb8.c1.utils:utils.obj
-	$(LINK) $(BIN)/utils.obj $(LINKOUT)$(BIN)/utils.exe
-	
+	$(LINK) $(BIN)/utils.obj $(LINKOUT)$(BIN)/utils$(OUTSUFFIX)
 rb8.c1.triangles:triangles.obj  LoadShaders.obj utils.obj copy
 	$(LINK) $(BIN)/triangles.obj $(BIN)/LoadShaders.obj $(LIBS) $(BIN)/utils.obj $(LINKOUT)$(BIN)/triangles$(OUTSUFFIX)
+
+
 copy:$(DIR_RB8)$(DIR_CHAPTER_1)/triangles.vert $(DIR_RB8)$(DIR_CHAPTER_1)/triangles.frag
 	cp $(DIR_RB8)$(DIR_CHAPTER_1)/triangles.vert $(BIN)/triangles.vert
 	cp $(DIR_RB8)$(DIR_CHAPTER_1)/triangles.frag $(BIN)/triangles.frag
@@ -47,7 +48,7 @@ triangles.obj:$(DIR_RB8)$(DIR_CHAPTER_1)/triangles.cpp
 LoadShaders.obj:$(DIR_RB8)$(DIR_CHAPTER_1)/LoadShaders.cpp
 	$(CL) $(DIR_RB8)$(DIR_CHAPTER_1)/LoadShaders.cpp $(CLOUT)$(BIN)/LoadShaders.obj $(OPTION) $(LIBS)
 utils.obj:$(DIR_RB8)$(DIR_CHAPTER_1)/utils.cpp 
-	$(CL) $(DIR_RB8)$(DIR_CHAPTER_1)/utils.cpp $(CLOUT)$(BIN)/utils.obj $(OPTION) $(LIBS)
+	$(CL) $(DIR_RB8)$(DIR_CHAPTER_1)/utils.cpp $(CLOUT)$(BIN)/utils.obj $(OPTION)
 	
 rb7.c2.geometry:geometry.obj draw.obj
 	$(LINK) $(BIN)/geometry.obj $(BIN)/draw.obj $(LINKOUT)$(BIN)/geometry.exe
