--- a/OpenGL_ES/makefile
+++ b/OpenGL_ES/makefile
@@ -4,9 +4,10 @@ CLOUT=/Fo
 LINKOUT=/OUT:
 
 DIR_SHARED=../shared
-LIBS=./lib/32-bit/libEGL.lib ./lib/32-bit/libGLESv2.lib
 INCLUDE=/I./include /I $(DIR_SHARED)/include
 
+LIB_GLES2=./lib/2.0/libEGL.lib ./lib/2.0/libGLESv2.lib 
+LIB_PNG=$(DIR_SHARED)/lib/libpng.lib $(DIR_SHARED)/lib/zlib.lib 
 OPTION= 
 
 BIN=./bin
@@ -16,7 +17,7 @@ DIR_POPO=/Popo
 DIR_DATA=/Data
 
 popo:PopoMain.obj PopoView.obj utils.obj
-	$(LINK) $(BIN)/PopoMain.obj $(BIN)/PopoView.obj $(LIBS) $(BIN)/utils.obj $(LINKOUT)$(BIN)/Popo.exe
+	$(LINK) $(BIN)/PopoMain.obj $(BIN)/PopoView.obj $(LIB_GLES2) $(BIN)/utils.obj $(LINKOUT)$(BIN)/$@.exe
 PopoMain.obj:$(DIR_GMAES)$(DIR_POPO)/main.cpp
 	$(CL) $(DIR_GMAES)$(DIR_POPO)/main.cpp $(CLOUT)$(BIN)/PopoMain.obj $(INCLUDE)
 	cp $(DIR_GMAES)$(DIR_POPO)/popo.vert $(BIN)/popo.vert
@@ -26,3 +27,8 @@ PopoView.obj:$(DIR_GMAES)$(DIR_POPO)/PopoView.cpp
 	$(CL) $(DIR_GMAES)$(DIR_POPO)/PopoView.cpp $(CLOUT)$(BIN)/PopoView.obj $(INCLUDE)
 utils.obj:$(DIR_SHARED)/src/utils.cpp
 	$(CL) $(DIR_SHARED)/src/utils.cpp $(CLOUT)$(BIN)/utils.obj $(INCLUDE)
+	
+pu:png_utils.obj
+	$(LINK) $(BIN)/png_utils.obj $(LIB_PNG) $(LINKOUT)$(BIN)/png_utils.exe  /NODEFAULTLIB:library
+png_utils.obj:$(DIR_GMAES)$(DIR_POPO)/png_utils.cpp
+	$(CL) $(DIR_GMAES)$(DIR_POPO)/png_utils.cpp $(CLOUT)$(BIN)/png_utils.obj $(INCLUDE) /MD
