--- a/OpenGL_ES/makefile
+++ b/OpenGL_ES/makefile
@@ -36,11 +36,11 @@ vector2d.obj:$(DIR_SHARED)/src/vector2d.cpp
 	$(CL) $(DIR_SHARED)/src/vector2d.cpp $(CLOUT)$(BIN)/vector2d.obj $(INCLUDE) $(OPTION)
 matrix.obj:$(DIR_SHARED)/src/matrix.cpp
 	$(CL) $(DIR_SHARED)/src/matrix.cpp $(CLOUT)$(BIN)/matrix.obj $(INCLUDE) $(OPTION)
-geom.obj:$(DIR_SHARED)/src/geom.cpp
-	$(CL) $(DIR_SHARED)/src/geom.cpp $(CLOUT)$(BIN)/geom.obj $(INCLUDE) $(OPTION)	
+affine.obj:$(DIR_SHARED)/src/affine.cpp
+	$(CL) $(DIR_SHARED)/src/affine.cpp $(CLOUT)$(BIN)/affine.obj $(INCLUDE) $(OPTION)	
 	
-gt:geom_test.obj geom.obj matrix.obj vector2d.obj
-	$(LINK) $(BIN)/geom_test.obj $(BIN)/geom.obj $(BIN)/matrix.obj $(BIN)/vector2d.obj $(LIB_PNG) $(LINKOUT)$(BIN)/geom_test.exe 
+gt:geom_test.obj affine.obj matrix.obj vector2d.obj
+	$(LINK) $(BIN)/geom_test.obj $(BIN)/affine.obj $(BIN)/matrix.obj $(BIN)/vector2d.obj $(LIB_PNG) $(LINKOUT)$(BIN)/geom_test.exe 
 geom_test.obj:$(DIR_GMAES)$(DIR_BUBBLE)/geom_test.cpp
 	$(CL) $(DIR_GMAES)$(DIR_BUBBLE)/geom_test.cpp $(CLOUT)$(BIN)/geom_test.obj $(INCLUDE) $(OPTION)	
 clean:
