--- a/OpenGL_ES/makefile
+++ b/OpenGL_ES/makefile
@@ -38,9 +38,11 @@ matrix.obj:$(DIR_SHARED)/src/matrix.cpp
 	$(CL) $(DIR_SHARED)/src/matrix.cpp $(CLOUT)$(BIN)/matrix.obj $(INCLUDE) $(OPTION)
 affine.obj:$(DIR_SHARED)/src/affine.cpp
 	$(CL) $(DIR_SHARED)/src/affine.cpp $(CLOUT)$(BIN)/affine.obj $(INCLUDE) $(OPTION)	
+kinematics.obj:$(DIR_SHARED)/src/kinematics.cpp
+	$(CL) $(DIR_SHARED)/src/kinematics.cpp $(CLOUT)$(BIN)/kinematics.obj $(INCLUDE) $(OPTION)
 	
-gt:geom_test.obj affine.obj matrix.obj vector2d.obj
-	$(LINK) $(BIN)/geom_test.obj $(BIN)/affine.obj $(BIN)/matrix.obj $(BIN)/vector2d.obj $(LIB_PNG) $(LINKOUT)$(BIN)/geom_test.exe 
+gt:geom_test.obj affine.obj matrix.obj vector2d.obj kinematics.obj
+	$(LINK) $(BIN)/geom_test.obj $(BIN)/affine.obj $(BIN)/matrix.obj $(BIN)/vector2d.obj $(BIN)/kinematics.obj $(LIB_PNG) $(LINKOUT)$(BIN)/geom_test.exe 
 geom_test.obj:$(DIR_GMAES)$(DIR_BUBBLE)/geom_test.cpp
 	$(CL) $(DIR_GMAES)$(DIR_BUBBLE)/geom_test.cpp $(CLOUT)$(BIN)/geom_test.obj $(INCLUDE) $(OPTION)	
 clean:
