--- a/OpenGL_ES/makefile
+++ b/OpenGL_ES/makefile
@@ -16,6 +16,9 @@ DIR_GMAES=./games
 DIR_DATA=/Data
 DIR_BUBBLE=/Bubble
 
+DIR_EFFECTS=./effects
+DIR_GRAY=/gray
+
 bb:BubbleMain.obj BubbleView.obj BubbleData.obj utils.obj random.obj kinematics.obj vector2d.obj matrix.obj affine.obj
 	$(LINK) $(BIN)/BubbleMain.obj $(BIN)/BubbleView.obj $(BIN)/BubbleData.obj $(LIB_GLES2) $(LIB_PNG) $(BIN)/utils.obj $(BIN)/random.obj $(BIN)/kinematics.obj $(BIN)/vector2d.obj $(BIN)/matrix.obj $(BIN)/affine.obj $(LINKOUT)$(BIN)/$@.exe
 BubbleMain.obj:$(DIR_GMAES)$(DIR_BUBBLE)/main.cpp
@@ -27,6 +30,16 @@ BubbleView.obj:$(DIR_GMAES)$(DIR_BUBBLE)/BubbleView.cpp
 	$(CL) $(DIR_GMAES)$(DIR_BUBBLE)/BubbleView.cpp $(CLOUT)$(BIN)/BubbleView.obj $(INCLUDE) $(OPTION)
 BubbleData.obj:$(DIR_GMAES)$(DIR_BUBBLE)/BubbleData.cpp 
 	$(CL) $(DIR_GMAES)$(DIR_BUBBLE)/BubbleData.cpp $(CLOUT)$(BIN)/BubbleData.obj $(INCLUDE) $(OPTION)
+
+e.gray:grayMain.obj gray.obj utils.obj
+	$(LINK) $(BIN)/grayMain.obj $(BIN)/gray.obj $(BIN)/utils.obj $(LIB_GLES2) $(LIB_PNG) $(LINKOUT)$(BIN)/$@.exe
+grayMain.obj:
+	$(CL) $(DIR_EFFECTS)$(DIR_GRAY)/main.cpp $(CLOUT)$(BIN)/grayMain.obj $(INCLUDE) $(OPTION)
+	cp $(DIR_EFFECTS)$(DIR_GRAY)/gray.vert $(BIN)/gray.vert
+	cp $(DIR_EFFECTS)$(DIR_GRAY)/gray.frag $(BIN)/gray.frag
+	cp $(DIR_EFFECTS)$(DIR_GRAY)/gray.png $(BIN)/gray.png
+gray.obj:
+	$(CL) $(DIR_EFFECTS)$(DIR_GRAY)/gray.cpp $(CLOUT)$(BIN)/gray.obj $(INCLUDE) $(OPTION)
 	
 utils.obj:$(DIR_SHARED)/src/utils.cpp
 	$(CL) $(DIR_SHARED)/src/utils.cpp $(CLOUT)$(BIN)/utils.obj $(INCLUDE) $(OPTION)
